cleaning and making a template

--- a/moore_data_prep.ipynb
+++ b/moore_data_prep.ipynb
@@ -753,7 +753,7 @@
     "dataset = dataset.cast_column(\"audio\", Audio(sampling_rate=16_000))\n",
     "dataset = dataset.cast_column(\"denoised_audio\", Audio(sampling_rate=16_000))\n",
     "\n",
-    "dataset.push_to_hub(\"ArissBandoss/moore-tts-full-dataset\")"
+    "#dataset.push_to_hub(\"ArissBandoss/moore-tts-full-dataset\")"
    ]
   },
   {
@@ -959,7 +959,6 @@
     "\n",
     "            # Write the formatted data to the metadata file\n",
     "            f.write(f\"wavs/{audio_filename}|{str(text)}|{str(speaker_id)}\\n\")\n",
-    "\n",
     "    return metadata_path"
    ]
   },
